// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle should render with default styles 1`] = `
.circuit-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-align: flex-start;
  -ms-flex-align: flex-start;
  flex-align: flex-start;
  margin-bottom: 16px;
}

.circuit-4 {
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-flex: 0 0 40px;
  -ms-flex: 0 0 40px;
  flex: 0 0 40px;
  background-color: #D8DDE1;
  border-radius: 24px;
  position: relative;
  -webkit-transition: background-color 200ms ease-in-out;
  transition: background-color 200ms ease-in-out;
  height: 24px;
  width: 40px;
  overflow: visible;
}

.circuit-4::-moz-focus-inner {
  border-radius: 24px;
}

.circuit-0 {
  display: block;
  background-color: #FAFBFC;
  box-shadow: 0 2px 0 0 #9DA7B1;
  position: absolute;
  top: 50%;
  -webkit-transform: translate3d(4px,-50%,0);
  -ms-transform: translate3d(4px,-50%,0);
  transform: translate3d(4px,-50%,0);
  -webkit-transition: box-shadow 200ms ease-in-out,-webkit-transform 200ms ease-in-out;
  -webkit-transition: box-shadow 200ms ease-in-out,transform 200ms ease-in-out;
  transition: box-shadow 200ms ease-in-out,transform 200ms ease-in-out;
  height: 16px;
  width: 16px;
  border-radius: 16px;
}

.circuit-2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-10 {
  display: block;
  margin-left: 12px;
}

.circuit-6 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 0;
  padding-top: 2px;
}

@media (min-width:480px) {
  .circuit-6 {
    font-size: 16px;
    line-height: 24px;
  }
}

.circuit-8 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 0;
  color: #9DA7B1;
}

@media (min-width:480px) {
  .circuit-8 {
    font-size: 16px;
    line-height: 24px;
  }
}

<div
  class="circuit-12 circuit-13"
>
  <button
    aria-checked="false"
    aria-labelledby="toggle-label_2"
    class="circuit-4 circuit-5"
    id="toggle-switch_1"
    role="switch"
    type="button"
  >
    <span
      class="circuit-0 circuit-1"
    />
    <span
      class="circuit-2 circuit-3"
    >
      off
    </span>
  </button>
  <label
    class="circuit-10 circuit-11"
    for="toggle-switch_1"
    id="toggle-label_2"
  >
    <p
      class="circuit-6 circuit-7"
    >
      Label
    </p>
    <p
      class="circuit-8 circuit-9"
    >
      A longer explanation
    </p>
  </label>
</div>
`;

exports[`Toggle should render with no margin styles when passed the noMargin prop 1`] = `
.circuit-4 {
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-flex: 0 0 40px;
  -ms-flex: 0 0 40px;
  flex: 0 0 40px;
  background-color: #D8DDE1;
  border-radius: 24px;
  position: relative;
  -webkit-transition: background-color 200ms ease-in-out;
  transition: background-color 200ms ease-in-out;
  height: 24px;
  width: 40px;
  overflow: visible;
}

.circuit-4::-moz-focus-inner {
  border-radius: 24px;
}

.circuit-0 {
  display: block;
  background-color: #FAFBFC;
  box-shadow: 0 2px 0 0 #9DA7B1;
  position: absolute;
  top: 50%;
  -webkit-transform: translate3d(4px,-50%,0);
  -ms-transform: translate3d(4px,-50%,0);
  transform: translate3d(4px,-50%,0);
  -webkit-transition: box-shadow 200ms ease-in-out,-webkit-transform 200ms ease-in-out;
  -webkit-transition: box-shadow 200ms ease-in-out,transform 200ms ease-in-out;
  transition: box-shadow 200ms ease-in-out,transform 200ms ease-in-out;
  height: 16px;
  width: 16px;
  border-radius: 16px;
}

.circuit-2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-10 {
  display: block;
  margin-left: 12px;
}

.circuit-6 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 0;
  padding-top: 2px;
}

@media (min-width:480px) {
  .circuit-6 {
    font-size: 16px;
    line-height: 24px;
  }
}

.circuit-8 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 0;
  color: #9DA7B1;
}

@media (min-width:480px) {
  .circuit-8 {
    font-size: 16px;
    line-height: 24px;
  }
}

.circuit-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-align: flex-start;
  -ms-flex-align: flex-start;
  flex-align: flex-start;
  margin-bottom: 16px;
  margin-bottom: 0;
}

<div
  class="circuit-12 circuit-13"
>
  <button
    aria-checked="false"
    aria-labelledby="toggle-label_4"
    class="circuit-4 circuit-5"
    id="toggle-switch_3"
    role="switch"
    type="button"
  >
    <span
      class="circuit-0 circuit-1"
    />
    <span
      class="circuit-2 circuit-3"
    >
      off
    </span>
  </button>
  <label
    class="circuit-10 circuit-11"
    for="toggle-switch_3"
    id="toggle-label_4"
  >
    <p
      class="circuit-6 circuit-7"
    >
      Label
    </p>
    <p
      class="circuit-8 circuit-9"
    >
      A longer explanation
    </p>
  </label>
</div>
`;
